Describe your changes

--- a/Projects.html
+++ b/Projects.html
@@ -373,18 +373,20 @@
         <span class="featured-badge">🏆 Award Winning</span>
         <h2>Porfolio Website</h2>
         <p class="description">
-          A comprehensive iOS mobile application designed to boost student participation, 
-          support, and school spirit through a loyalty rewards system. Built entirely 
-          solo during senior year Capstone project. The app won a national award and 
-          earned $1,000 for each team member. Featured on local news.
+          I built a personal portfolio website using HTML, CSS and JavaScript to showcase my 
+          resume, skills, and projects. The goal was to create a clean, easy-to-navigate 
+          place where employers can quickly learn about my background and what I can do. 
+          I structured the site with separate pages for my bio, skills, projects, and contact 
+          information, and I styled everything myself to keep it simple and professional. 
+          This project demonstrates my ability to build and organize a functional website from scratch.
         </p>
         <div class="tech-stack">
-          <span class="tech-tag">Swift</span>
-          <span class="tech-tag">Xcode</span>
-          <span class="tech-tag">iOS</span>
-          <span class="tech-tag">UI/UX Design</span>
+          <span class="tech-tag">JavaScript</span>
+          <span class="tech-tag">HTML</span>
+          <span class="tech-tag">CSS</span>
+          <span class="tech-tag">GitHub</span>
         </div>
-        <a href="https://github.com" target="_blank" class="project-btn primary">
+        <a href="https://github.com/XavierChitison/Resume" target="_blank" class="project-btn primary">
           <i class="fa-brands fa-github"></i> View on GitHub
         </a>
       </div>
@@ -410,7 +412,7 @@
         <div class="label">Certifications</div>
       </div>
       <div class="stat-card">
-        <div class="number">5+</div>
+        <div class="number">5</div>
         <div class="label">Languages</div>
       </div>
     </div>
@@ -419,12 +421,11 @@
     <!-- Bottom nav Bar -->
 <nav>
       <div class="bottom-Navbar">
+        <a href="home.html">Home</a>
+
+        <a href="skills.html">Skills</a>
         <!-- Abpout me links -->
         <a href="about.html">About Me</a>
-        <!-- Contacts links -->
-         <a href="skills.html">Skills</a>
-         <!-- Skills link -->
-        <a href="home.html">Home</a>
         <!-- Projects link -->
          <a href="contact.html">Contacts</a>
          <span class="copyright">© 2026 Xavier Chitison</span>
