Update skills and add new assets

--- a/skills.html
+++ b/skills.html
@@ -357,8 +357,8 @@
         { name: 'The Origins I: HTML', issuer: 'Codedex', image: 'Assets/Html2.jpeg' }
       ],
       css: [
-        // { name: 'CSS3 Mastery', issuer: 'Udemy', image: 'Assets/Cert7.jpeg' },
-        // { name: 'Responsive Web Design', issuer: 'FreeCodeCamp', image: 'Assets/Cert8.jpeg' }
+         { name: 'The Origins II: CSS', issuer: 'Codedex', image: 'Assets/IMG_5178.jpg' },
+         { name: 'Responsive Web Design', issuer: 'FreeCodeCamp', image: 'Assets/Csscert copy.png' }
       ],
       javascript: [
         // { name: 'JavaScript Algorithms', issuer: 'FreeCodeCamp', image: 'Assets/Cert1.pdf' },
